feat: implement disable/enable HID devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(goodnight-lib
 )
 
 target_link_libraries(goodnight-lib
-    wevtapi
+    wevtapi Setupapi Newdev
 )
 
 target_include_directories(goodnight-lib
