--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,3 +31,8 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        path: ${{github.workspace}}/build/goodnight-cli.exe
