--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -35,4 +35,6 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        path: ${{github.workspace}}/build/${{env.BUILD_TYPE}}/goodnight-cli.exe
+        path: |
+          ${{github.workspace}}/build/${{env.BUILD_TYPE}}/goodnight-cli.exe
+          ${{github.workspace}}/build/${{env.BUILD_TYPE}}/goodnight-gui.exe
